# rp2040-bidirectional-usb

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  split_by_usb.c  tusb_config.h
